[gd_scene load_steps=27 format=2]

[ext_resource path="res://asset/gfx/ingame.png" type="Texture" id=1]
[ext_resource path="res://scene/maingame/Game.gd" type="Script" id=2]
[ext_resource path="res://asset/theme/GameLarge.tres" type="Theme" id=3]
[ext_resource path="res://asset/fnt/04B_03_.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://asset/gfx/BG1.tres" type="TileSet" id=5]
[ext_resource path="res://asset/gfx/player.png" type="Texture" id=6]
[ext_resource path="res://asset/gfx/slime.png" type="Texture" id=7]
[ext_resource path="res://asset/gfx/ui.png" type="Texture" id=8]
[ext_resource path="res://asset/sfx/linkcreate.wav" type="AudioStream" id=9]
[ext_resource path="res://asset/sfx/enemyhurt.wav" type="AudioStream" id=10]
[ext_resource path="res://asset/sfx/playerhurt.wav" type="AudioStream" id=11]
[ext_resource path="res://asset/sfx/startjingle.wav" type="AudioStream" id=12]
[ext_resource path="res://asset/sfx/place.wav" type="AudioStream" id=13]
[ext_resource path="res://asset/gfx/sparkle.png" type="Texture" id=14]

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="TileSet" id=15]
0/name = "0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 32, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 32, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 48, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=1]
0/name = "0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 16, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 80, 0, 16, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 0, 16, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 112, 0, 16, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=9]
size = 8
extra_spacing_bottom = -4
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "StatusUpdate"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.0941176 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 8
extra_spacing_bottom = -5
font_data = ExtResource( 4 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.0144231, 0.888158 ), 0.0, 0.0, 0, 0, Vector2( 0.25, 0.826754 ), 0.0, 0.0, 0, 0, Vector2( 0.504808, 0.914474 ), 0.0, 0.0, 0, 0, Vector2( 0.75, 0.800439 ), 0.0, 0.0, 0, 0, Vector2( 0.995192, 0.89693 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.00552486, 0.187845, 1 )
colors = PoolColorArray( 0.901961, 0.913725, 0.141176, 0, 0.90755, 0.917543, 0.186635, 1, 1, 1, 1, 1, 0.356863, 0.92549, 0.823529, 0 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Playfield" type="Node2D" parent="."]
position = Vector2( 68, 73 )

[node name="Next" type="TileMap" parent="Playfield"]
modulate = Color( 1, 1, 1, 0.501961 )
material = SubResource( 14 )
position = Vector2( 0, 2 )
z_index = 20
tile_set = SubResource( 15 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1

[node name="NextDisplay" type="TileMap" parent="Playfield"]
position = Vector2( 0, 2 )
z_index = 20
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( -327677, 1073741829, 0, -262140, 1073741829, 0, -65528, 1073741829, 0, -65527, 1073741829, 0, 131080, 1073741829, 0, 131081, 1073741829, 0 )

[node name="Field" type="TileMap" parent="Playfield"]
position = Vector2( 0, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65537, 0, 0, 131074, 0, 0, 131076, 0, 0, 131077, 0, 0, 196614, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="FieldShadows" type="TileMap" parent="Playfield"]
modulate = Color( 1, 1, 1, 0.745098 )
z_index = -10
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SpecialShadows" type="TileMap" parent="Playfield"]
modulate = Color( 1, 1, 1, 0.745098 )
z_index = 10
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( -327671, 0, 0, 458749, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="FieldBG" type="TileMap" parent="Playfield"]
modulate = Color( 1, 1, 1, 0.745098 )
z_index = -20
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 12 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( -393213, 1073741825, 0, -327678, 1073741825, 0, -327677, 1073741825, 0, -327676, 1073741825, 0, -327671, 1, 0, -262142, 1073741825, 0, -262141, 1073741825, 0, -262140, 1073741825, 0, -131069, 1073741825, 0, -65535, 1073741825, 0, -65534, 1073741825, 0, -65533, 1073741825, 0, -65532, 1073741825, 0, -65531, 1073741825, 0, 65535, 1073741827, 0, 0, 1073741825, 0, 1, 1073741825, 0, 2, 1073741825, 0, 3, 1073741825, 0, 4, 1073741825, 0, 5, 1073741825, 0, 6, 1073741825, 0, 7, 1073741826, 0, 131071, 1073741827, 0, 65536, 1073741825, 0, 65537, 1073741825, 0, 65538, 1073741825, 0, 65539, 1073741825, 0, 65540, 1073741825, 0, 65541, 1073741825, 0, 65542, 1073741825, 0, 65543, 1073741826, 0, 196607, 1073741827, 0, 131072, 1073741825, 0, 131073, 1073741825, 0, 131074, 1073741825, 0, 131075, 1073741825, 0, 131076, 1073741825, 0, 131077, 1073741825, 0, 131078, 1073741825, 0, 131079, 1073741826, 0, 262143, 1073741827, 0, 196608, 1073741825, 0, 196609, 1073741825, 0, 196610, 1073741825, 0, 196611, 1073741825, 0, 196612, 1073741825, 0, 196613, 1073741825, 0, 196614, 1073741825, 0, 196615, 1073741826, 0, 262146, 1073741825, 0, 262147, 1073741825, 0, 262148, 1073741825, 0, 458749, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="XP" type="Label" parent="."]
margin_left = 8.0
margin_top = 7.0
margin_right = 48.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "XP: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectChain" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 56.0
theme = ExtResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyPowerTag" type="Label" parent="."]
margin_left = 200.0
margin_top = 42.0
margin_right = 240.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPowerTag" type="Label" parent="."]
margin_left = 8.0
margin_top = 174.0
margin_right = 48.0
margin_bottom = 190.0
theme = ExtResource( 3 )
text = "0%"
align = 1

[node name="Status" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 152.0
margin_right = 249.0
margin_bottom = 168.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 9 )
text = "STATUS!
STATUS!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Status")
anims/RESET = SubResource( 7 )
anims/StatusUpdate = SubResource( 8 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="PlayerHPBar" type="Sprite" parent="."]
position = Vector2( 8, 136 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 17, 46, 9 )

[node name="PlayerPOWBar" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 144 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 25, 35, 4 )

[node name="PlayerUIBase" type="Sprite" parent="."]
position = Vector2( 8, 136 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 48, 17, 46, 9 )

[node name="PlayerWeaponType" type="Sprite" parent="."]
position = Vector2( 12, 149 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 48, 8, 8 )

[node name="EnemyHPBar" type="Sprite" parent="."]
position = Vector2( 193, 6 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 17, 46, 9 )

[node name="EnemyPOWBar" type="Sprite" parent="."]
visible = false
position = Vector2( 193, 14 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 25, 35, 4 )

[node name="EnemyUIBase" type="Sprite" parent="."]
position = Vector2( 193, 6 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 48, 17, 46, 9 )

[node name="EnemyIcon" type="Sprite" parent="."]
position = Vector2( 196, 18 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 8, 56, 8, 8 )

[node name="EnemyStats" type="Label" parent="."]
margin_left = 195.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 16.0
grow_horizontal = 0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "30/30
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyStats2" type="Label" parent="."]
margin_left = 200.0
margin_top = 15.0
margin_right = 248.0
margin_bottom = 24.0
grow_horizontal = 0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "2dX+2d4+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStats" type="Label" parent="."]
margin_left = 10.0
margin_top = 137.0
margin_right = 53.0
margin_bottom = 146.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "30/30
"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_left = 7.0
margin_top = 169.0
margin_right = 50.0
margin_bottom = 178.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Phoebe"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyName" type="Label" parent="."]
margin_left = 199.0
margin_top = 37.0
margin_right = 242.0
margin_bottom = 46.0
grow_horizontal = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Slime"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPower" type="Label" parent="."]
margin_left = 16.0
margin_top = 145.0
margin_right = 59.0
margin_bottom = 154.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "2d4+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TileMap" parent="."]
position = Vector2( -4, 0 )
z_index = -200
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 2, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 1, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 2, 0, 65543, 0, 0, 65544, 0, 0, 65545, 1, 0, 65546, 0, 0, 65547, 2, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 1, 0, 131072, 0, 0, 131073, 0, 0, 131074, 2, 0, 131075, 0, 0, 131076, 3, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 1, 0, 131082, 0, 0, 131083, 3, 0, 131084, 0, 0, 131085, 0, 0, 131086, 1, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196613, 2, 0, 196614, 0, 0, 196615, 0, 0, 196616, 1, 0, 196617, 0, 0, 196618, 0, 0, 196620, 0, 0, 196621, 1, 0, 196622, 0, 0, 196623, 2, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 1, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 1, 0, 262159, 0, 0, 327680, 2, 0, 327681, 0, 0, 327682, 2, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 1, 0, 327690, 0, 0, 327691, 0, 0, 327692, 2, 0, 327693, 0, 0, 327694, 1, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 1, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 1, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 1, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 2, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 1, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 1, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 3, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 1, 0, 589833, 0, 0, 589834, 0, 0, 589835, 3, 0, 589836, 1, 0, 589837, 0, 0, 589838, 1, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655365, 2, 0, 655366, 0, 0, 655367, 1, 0, 655368, 0, 0, 655369, 0, 0, 655370, 2, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 655375, 1, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655389, 4, 0, 655390, 4, 0, 655391, 4, 0, 655392, 4, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 1, 0, 720903, 0, 0, 720904, 1, 0, 720905, 0, 0, 720906, 0, 0, 720907, 1, 0, 720908, 0, 0, 720909, 1, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 2, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 1, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 1, 0, 720923, 0, 0, 720924, 0, 0, 720925, 2, 0, 720926, 0, 0, 720927, 1, 0, 720928, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 1, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 1, 0, 786442, 0, 0, 786443, 1, 0, 786444, 0, 0, 786445, 0, 0, 786446, 1, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 2, 0, 786451, 2, 0, 786452, 0, 0, 786453, 0, 0, 786454, 1, 0, 786455, 0, 0, 786456, 0, 0, 786457, 2, 0, 786458, 0, 0, 786459, 1, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="BG"]
margin_left = -18.0
margin_right = 256.0
margin_bottom = 208.0
color = Color( 0, 0, 0, 0.592157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D2" type="CPUParticles2D" parent="BG"]
position = Vector2( 315, 99 )
z_index = -20
amount = 200
lifetime = 15.0
randomness = 0.31
texture = ExtResource( 14 )
emission_shape = 2
emission_rect_extents = Vector2( 60, 100 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
scale_amount = 1.2
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )
hue_variation = 1.0
hue_variation_random = 0.76

[node name="Node2D" type="Node2D" parent="BG"]
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="BG/Node2D"]
z_index = -200
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="BG/Node2D/Node2D"]
margin_left = 256.0
margin_right = 528.0
margin_bottom = 208.0
color = Color( 0.00784314, 0.00392157, 0.0470588, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 272.0
margin_bottom = 208.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 28, 161 )
z_index = 100
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 220, 29 )
z_index = 100
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="GetReady" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.735
bus = "SFX"

[node name="LinkCreate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.096
bus = "SFX"

[node name="PlayerHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -4.844
bus = "SFX"

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 0.4
bus = "SFX"

[node name="Place" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.718
bus = "SFX"

[node name="Warning" type="Label" parent="."]
visible = false
margin_left = 72.0
margin_top = 56.0
margin_right = 177.0
margin_bottom = 65.0
grow_horizontal = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "WARNING: POWER LOW!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
